:lipstick: fix footer copyrights align

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3014,16 +3014,13 @@ input[type="button"].small,
 }
 
 #footer .copyright li {
-  border-left: dotted 1px;
-  display: inline-block;
-  margin-left: 1em;
-  padding-left: 1em;
+  display: block;
+  margin: 0;
+  padding: 0.75em 0 0 0;
 }
 
 #footer .copyright li:first-child {
   padding: 0;
-  margin: 0;
-  border: 0;
 }
 
 #footer .copyright li a,
